Fix: overflow hidden on image containers

--- a/src/OxPollen/Styles/Components/_GrainGrid.scss
+++ b/src/OxPollen/Styles/Components/_GrainGrid.scss
@@ -122,3 +122,7 @@
     top: 5px;
     right: 5px;
 }
+
+.img-container {
+    overflow:hidden;
+}
